No admin functions on iOS (because buggy); no Settings in library

--- a/src/css/library.css
+++ b/src/css/library.css
@@ -285,5 +285,4 @@ body.list-view .details{
 
 #app-container {
   -webkit-overflow-scrolling: touch;
-  z-index: 1050;
 }
